--- a/index.css
+++ b/index.css
@@ -28,8 +28,9 @@ div{
     height: 100%;
 }
 #titel, #mid{
-    width: 66%;
+    width: 55%;
     height: 100%;
+    
     
 }
 #screenshot{
@@ -56,7 +57,9 @@ td{
  .red{
      background-color: rgb(248, 122, 122);
  }
-
+.red2{
+    background-color: rgb(248, 149, 35);
+}
  .yellow{
      background-color: rgb(245, 245, 112);
  }
@@ -64,6 +67,10 @@ td{
  .green{
      background-color: greenyellow;
  }
+ .green2{
+     background-color: rgb(200, 248, 128);
+ }
+ 
  .noborder{
      text-align: left;
      padding: 0px;
